# PyBCA

./: .gitignore  LICENSE  README.md  event_history.jsonl  pyproject.toml  tested.yaml  tested1.yaml  tested2.yaml  tested3.yaml
SampleCP/: BCA-IP_event.py  C-Join.yaml  C-Joinerrdetect.py  P0_C-Join.yaml  P1_C-Join.yaml  P2_C-Join.yaml  cross.yaml  test.yaml  test_event.py
src/: TEST.py  __init__.py  cli_simClass.py  cudaBCA.py  guitools.py  lib.py
src/PyBCA/: TEST.py  __init__.py  cli_simClass.py  guitools.py  lib.py
src/PyBCA/rule/: C-Join_err-rule.yaml  C-Join_err-rule_3.yaml
src/rule/: C-Join_err-rule.yaml  base-rule.yaml
