[project]
name = "PyBCA"
version = "0.2.0"
description = "Brownian Cellular Automaton"
authors = [{ name = "Minamium", email = "arcadia.battery@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch>=2.0",
  "scipy",
  "pyyaml"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]